--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -47,15 +47,14 @@ spec:
             parse_from: attributes.time
             layout: '%Y-%m-%dT%H:%M:%S.%LZ'
         - type: move
-          id: extract_metadata_from_filepath #TODO: rm
           from: attributes.log
           to: body
-        # - id: extract_metadata_from_filepath
-    #   type: regex_parser
-    #   regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
-    #   parse_from: attributes["log.file.path"]
-    #   cache:
-    #     size: 128
+        - id: extract_metadata_from_filepath
+          type: regex_parser
+          regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
+          parse_from: attributes["log.file.path"]
+          cache:
+            size: 128
     # - type: move
     #   from: attributes.stream
     #   to: attributes["log.iostream"]
