--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -50,11 +50,15 @@ spec:
           from: attributes.log
           to: body
         - id: extract_metadata_from_filepath
-          type: regex_parser
-          regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
-          parse_from: attributes["log.file.path"]
-          cache:
-            size: 128
+          type: move
+          from: attributes["log.file.path"]
+          to: attributes.debug
+    # - id: extract_metadata_from_filepath
+    #   type: regex_parser
+    #   regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
+    #   parse_from: attributes["log.file.path"]
+    #   cache:
+    #     size: 128
     # - type: move
     #   from: attributes.stream
     #   to: attributes["log.iostream"]
