--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -50,33 +50,29 @@ spec:
           from: attributes.log
           to: body
         - id: extract_metadata_from_filepath
-          type: move
-          from: attributes["log.file.path"]
-          to: resource.debug
-    # - id: extract_metadata_from_filepath
-    #   type: regex_parser
-    #   regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
-    #   parse_from: attributes["log.file.path"]
-    #   cache:
-    #     size: 128
-    # - type: move
-    #   from: attributes.stream
-    #   to: attributes["log.iostream"]
-    # - type: move
-    #   from: attributes.container_name
-    #   to: resource["k8s.container.name"]
-    # - type: move
-    #   from: attributes.namespace
-    #   to: resource["k8s.namespace.name"]
-    # - type: move
-    #   from: attributes.pod_name
-    #   to: resource["k8s.pod.name"]
-    # - type: move
-    #   from: attributes.restart_count
-    #   to: resource["k8s.container.restart_count"]
-    # - type: move
-    #   from: attributes.uid
-    #   to: resource["k8s.pod.uid"]
+          type: regex_parser
+          regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
+          parse_from: attributes["log.file.path"]
+          cache:
+            size: 128
+        - type: move
+          from: attributes.stream
+          to: attributes["log.iostream"]
+        - type: move
+          from: attributes.container_name
+          to: resource["k8s.container.name"]
+        - type: move
+          from: attributes.namespace
+          to: resource["k8s.namespace.name"]
+        - type: move
+          from: attributes.pod_name
+          to: resource["k8s.pod.name"]
+        - type: move
+          from: attributes.restart_count
+          to: resource["k8s.container.restart_count"]
+        - type: move
+          from: attributes.uid
+          to: resource["k8s.pod.uid"]
     processors:
       memory_limiter:
         check_interval: 1s
