--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -60,13 +60,13 @@ spec:
           to: attributes["log.iostream"]
         - type: move
           from: attributes.container_name
-          to: resource.container
+          to: resource["k8s.container.name"]
         - type: move
           from: attributes.namespace
-          to: resource.namespace
+          to: resource["k8s.namespace.name"]
         - type: move
           from: attributes.pod_name
-          to: resource.pod
+          to: resource["k8s.pod.name"]
         - type: move
           from: attributes.restart_count
           to: resource["k8s.container.restart_count"]
