--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -18,7 +18,7 @@ spec:
         image: photoprism/photoprism:240420
         resources:
           requests:
-            cpu: 100m
+            cpu: "0"
             memory: 2Gi
           limits:
             cpu: "2"
