--- a/k8s/apps/tempo/helm.yaml
+++ b/k8s/apps/tempo/helm.yaml
@@ -26,7 +26,7 @@ spec:
           backend: s3
           s3:
             bucket: tempo
-            endpoint: "http://minio.minio.svc.cluster.local:9000"
+            endpoint: "minio.minio.svc.cluster.local:9000"
             access_key: '${MINIO_ACCESS_KEY}'
             secret_key: '${MINIO_SECRET_KEY}'
             insecure: true
