--- a/k8s/apps/cloudflared/externalsecret.yaml
+++ b/k8s/apps/cloudflared/externalsecret.yaml
@@ -12,5 +12,5 @@ spec:
   data:
   - secretKey: cloudflared-token
     remoteRef:
-      key: cloudflared
+      key: cloudflare
       property: k8s-tunnel-token
