--- a/k8s/apps/cloudflared/deployment.yaml
+++ b/k8s/apps/cloudflared/deployment.yaml
@@ -12,10 +12,14 @@ spec:
       labels:
         app: cloudflared
     spec:
-      # securityContext:
-      #   sysctls:
-      #   - name: net.ipv4.ping_group_range
-      #     value: "0 2147483647"
+      securityContext:
+        sysctls:
+        - name: net.ipv4.ping_group_range
+          value: "0 2147483647"
+        - name: net.core.rmem_max
+          value: "7500000"
+        - name: net.core.wmem_max
+          value: "7500000"
       containers:
       - name: cloudflared
         image: cloudflare/cloudflared:2024.6.1
