--- a/k8s/apps/komga/kustomization.yaml
+++ b/k8s/apps/komga/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: photoprism
+namespace: komga
 resources:
 - externalsecret.yaml
 - service.yaml
