--- a/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
@@ -24,6 +24,33 @@ spec:
       batch:
         send_batch_size: 10000
         timeout: 10s
+      k8sattributes:
+        auth_type: 'serviceAccount'
+        filter:
+          node_from_env_var: K8S_NODE_NAME
+        extract:
+          metadata:
+          - k8s.namespace.name
+          - k8s.pod.name
+          - k8s.pod.start_time
+          - k8s.pod.uid
+          - k8s.deployment.name
+          - k8s.node.name
+          - k8s.cluster.uid
+          - k8s.cronjob.name
+          - k8s.job.name
+          - k8s.daemonset.name
+          - k8s.statefulset.name
+          - k8s.cluster.name
+        pod_association: # How to associate the data to a pod (order matters)
+        - sources: # First try to use the value of the resource attribute k8s.pod.ip
+          - from: resource_attribute
+            name: k8s.pod.ip
+        - sources: # Then try to use the value of the resource attribute k8s.pod.uid
+          - from: resource_attribute
+            name: k8s.pod.uid
+        - sources: # If neither of those work, use the request's connection to get the pod IP.
+          - from: connection
     exporters:
       otlp/default:
         endpoint: default-collector.opentelemetry-collector.svc.cluster.local:4317
@@ -33,7 +60,7 @@ spec:
       pipelines:
         metrics:
           receivers: [kubeletstats]
-          processors: [memory_limiter, batch]
+          processors: [memory_limiter, batch, k8sattributes]
           exporters: [otlp/default]
   env:
   - name: K8S_NODE_IP
