should not be enabled: WARNING: This metric will be disabled in a future release.

--- a/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
@@ -16,6 +16,13 @@ spec:
         - node
         - pod
         - container
+        metrics:
+          container.cpu.utilization:
+            enabled: false
+          k8s.node.cpu.utilization:
+            enabled: false
+          k8s.pod.cpu.utilization:
+            enabled: false
     processors:
       memory_limiter:
         check_interval: 1s
