--- a/k8s/apps/komga/externalsecret.yaml
+++ b/k8s/apps/komga/externalsecret.yaml
@@ -1,16 +1,27 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: komga
+  name: komga-config
 spec:
   secretStoreRef:
     name: vault-secretstore
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
-    name: komga
+    name: komga-config
+    template:
+      engineVersion: v2
+      type: Opaque
+      templateFrom:
+      - target: Data
+        configMap:
+          name: komga-config
+          items:
+          - key: application.yml
+            templateAs: Values
   data:
-  - secretKey: adminpassword
+  - secretKey: clientsecret
     remoteRef:
       key: komga
-      property: admin-password
+      property: client-secret
+
