--- a/k8s/apps/komga/pvc.yaml
+++ b/k8s/apps/komga/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: komga
+  name: komga-config
 spec:
   storageClassName: longhorn
   accessModes:
