--- a/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/kubelet/otel-collector.yaml
@@ -57,6 +57,9 @@ spec:
             name: k8s.pod.uid
         - sources: # If neither of those work, use the request's connection to get the pod IP.
           - from: connection
+        resource_attributes:
+          k8s.cluster.uid:
+            enabled: true
     exporters:
       otlp/default:
         endpoint: default-collector.opentelemetry-collector.svc.cluster.local:4317
