--- a/k8s/apps/komga/statefulset.yaml
+++ b/k8s/apps/komga/statefulset.yaml
@@ -27,6 +27,8 @@ spec:
           name: config-file
           subPath: application.yml
           readOnly: true
+        - mountPath: /books
+          name: book-dir
       volumes:
       - name: config-dir
         persistentVolumeClaim:
@@ -34,3 +36,10 @@ spec:
       - name: config-file
         secret:
           secretName: komga-config
+   volumes:
+      - name: book-dir
+        hostPath:
+          path: /mnt/data/share/Books
+          type: Directory
+      nodeSelector:
+        kubernetes.io/hostname: cake
