--- a/k8s/namespaces/namespaces.yaml
+++ b/k8s/namespaces/namespaces.yaml
@@ -102,3 +102,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: komga
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cilium-system
