--- a/k8s/apps/moco/helm.yaml
+++ b/k8s/apps/moco/helm.yaml
@@ -26,3 +26,7 @@ spec:
               operator: In
               values:
               - amd64
+    resources:
+      requests:
+        cpu: 10m
+        memory: 20Mi
