--- a/k8s/apps/opentelemetry-operator/helm.yaml
+++ b/k8s/apps/opentelemetry-operator/helm.yaml
@@ -21,3 +21,9 @@ spec:
       extraArgs:
       - --enable-go-instrumentation=true
       - --enable-nginx-instrumentation=true
+      resources:
+        limits:
+          memory: 128Mi
+        requests:
+          cpu: 5m
+          memory: 64Mi
