add metallb debug log

--- a/k8s/apps/metallb/helm.yaml
+++ b/k8s/apps/metallb/helm.yaml
@@ -15,3 +15,9 @@ spec:
       chart: metallb
       # version: 0.13.12
       version: 0.14.8
+  values:
+    controller:
+      logLevel: debug
+    speaker:
+      logLevel: debug
+
