--- a/k8s/apps/cilium/helm.yaml
+++ b/k8s/apps/cilium/helm.yaml
@@ -21,5 +21,8 @@ spec:
   values:
     envoy:
       enabled: false
+    kubeProxyReplacement: true
+    k8sServiceHost: 192.168.0.17
+    k8sServicePort: 16443
     # ipam:
 #   mode: kubernetes
