--- a/k8s/apps/cilium-ipaddress/kustomization.yaml
+++ b/k8s/apps/cilium-ipaddress/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: metallb-system
+namespace: cilium-system
 resources:
-- ipaddresspool.yaml
-- l2advertisment.yaml
+- loadbalancerippool.yaml
