--- a/k8s/apps/cilium/helm.yaml
+++ b/k8s/apps/cilium/helm.yaml
@@ -19,8 +19,8 @@ spec:
       chart: cilium
       version: 1.16.1
   values:
-    envoy:
-      enabled: false
+    # envoy:
+    #   enabled: false
     kubeProxyReplacement: true
     k8sServiceHost: 192.168.0.17
     k8sServicePort: 16443
