--- a/k8s/apps/cilium-ipaddress/loadbalancerippool.yaml
+++ b/k8s/apps/cilium-ipaddress/loadbalancerippool.yaml
@@ -1,7 +1,7 @@
-apiVersion: "cilium.io/v2alpha1"
+apiVersion: cilium.io/v2alpha1
 kind: CiliumLoadBalancerIPPool
 metadata:
-  name: "default"
+  name: default
 spec:
   blocks:
   - start: "192.168.0.128"
