--- a/k8s/apps/opentelemetry-collectors/kustomization.yaml
+++ b/k8s/apps/opentelemetry-collectors/kustomization.yaml
@@ -5,8 +5,8 @@ resources:
 - sa.yaml
 - ./default
 - ./filelog
-- ./kubelet
-- ./cluster
+- ./k8s-daemonset
+- ./k8s-deployment
 - ./loki-exporter
 - ./servicemonitor
 - ./prometheus-exporter
