add iamgepolicy photoprism
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/k8s/apps/photoprism/cronjob.yaml
+++ b/k8s/apps/photoprism/cronjob.yaml
@@ -13,7 +13,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: photoprism
-            image: photoprism/photoprism:240420
+            image: photoprism/photoprism:240420 # {"$imagepolicy": "photoprism:photoprism"}
             command:
             - photoprism
             - index
