--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: photoprism
-        image: photoprism/photoprism:240420
+        image: photoprism/photoprism:240420 # {"$imagepolicy": "photoprism:photoprism"}
         resources:
           requests:
             cpu: "0"
