--- a/k8s/apps/photoprism/image-policy.yaml
+++ b/k8s/apps/photoprism/image-policy.yaml
@@ -39,7 +39,7 @@ spec:
   imageRepositoryRef:
     name: photoprism
   filterTags:
-    pattern: '(?P<year>[0-9]{4})\.(?P<month>[0-9]+)\.(?P<version>[0-9]+)'
+    pattern: '(?P<version>[0-9]+)'
   policy:
-    semver:
-      range: ">=0.0.0"
+    numerical:
+      order: asc
