--- a/k8s/apps/opentelemetry-collectors/k8s-deployment/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/k8s-deployment/otel-collector.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   serviceAccount: otel-collector
   mode: deployment
-  image: otel/opentelemetry-collector-k8s:0.108.0
+  image: otel/opentelemetry-collector-k8s:0.108.0 # {"$imagepolicy": "opentelemetry-collector:opentelemetry-collector-k8s"}
   config:
     receivers:
       k8s_cluster:
