--- a/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/prometheus-exporter/otel-collector.yaml
@@ -7,7 +7,7 @@ metadata:
   name: prometheus-exporter
 spec:
   mode: deployment
-  image: otel/opentelemetry-collector-contrib:0.103.0
+  image: otel/opentelemetry-collector-contrib:0.103.0 # {"$imagepolicy": "opentelemetry-collector:opentelemetry-collector-contrib"}
   config:
     receivers:
       otlp:
