--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -38,6 +38,10 @@ spec:
           value: "2342"
         - name: PHOTOPRISM_ADMIN_USER
           value: photoprism
+        - name: PHOTOPRISM_SITE_URL
+          value: https://photoprism.walnuts.dev/
+        - name: PHOTOPRISM_DISABLE_TLS
+          value: "true"
         - name: PHOTOPRISM_OIDC_URI
           value: https://auth.walnuts.dev
         - name: PHOTOPRISM_OIDC_CLIENT
