rm PHOTOPRISM_OIDC_REDIRECT
Signed-off-by: walnuts1018 <r.juglans.1018@gmail.com>

--- a/k8s/apps/photoprism/statefulset.yaml
+++ b/k8s/apps/photoprism/statefulset.yaml
@@ -59,7 +59,7 @@ spec:
         - name: PHOTOPRISM_OIDC_REGISTER
           value: "true"
         - name: PHOTOPRISM_OIDC_REDIRECT
-          value: "true"
+          value: "false"
 
         # Load database DSN & admin password from secret
         envFrom:
