--- a/k8s/apps/photoprism/cronjob.yaml
+++ b/k8s/apps/photoprism/cronjob.yaml
@@ -37,7 +37,7 @@ spec:
             - name: PHOTOPRISM_HTTP_PORT
               value: "2342"
             - name: PHOTOPRISM_ADMIN_USER
-              value: juglans
+              value: photoprism
             envFrom:
             - secretRef:
                 name: photoprism
