--- a/k8s/apps/postgresql-default/users/component/patches.yaml
+++ b/k8s/apps/postgresql-default/users/component/patches.yaml
@@ -2,7 +2,7 @@
   path: /spec
   value:
     secretStoreRef:
-      name: vault-secretstore
+      name: vault
       kind: ClusterSecretStore
     refreshInterval: 1m
     target:
