--- a/k8s/apps/external-secrets-store/vault.yaml
+++ b/k8s/apps/external-secrets-store/vault.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: vault-secretstore
+  name: vault
 spec:
   provider:
     vault:
