--- a/k8s/apps/influxdb/externalsecret.yaml
+++ b/k8s/apps/influxdb/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: influxdb
 spec:
   secretStoreRef:
-    name: vault-secretstore
+    name: vault
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
