--- a/k8s/apps/letsencrypt/externalsecret.yaml
+++ b/k8s/apps/letsencrypt/externalsecret.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cert-manager
 spec:
   secretStoreRef:
-    name: vault-secretstore
+    name: vault
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
