--- a/k8s/apps/machine-status-api/externalsecret.yaml
+++ b/k8s/apps/machine-status-api/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: machine-status-api-secret
 spec:
   secretStoreRef:
-    name: vault-secretstore
+    name: vault
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
