--- a/k8s/apps/external-secrets-store/onepassword.yaml
+++ b/k8s/apps/external-secrets-store/onepassword.yaml
@@ -4,11 +4,10 @@ metadata:
   name: onepassword
 spec:
   provider:
-    vault:
-      server: "http://onepassword-connect.onepassword.svc.cluster.local:8080"
-      path: "kv"
-      version: "v1"
-      namespace: "onepassword"
+    onepassword:
+      connectHost: "http://onepassword-connect.onepassword.svc.cluster.local:8080"
+      vaults:
+        kurumi: 1
       auth:
         secretRef:
           connectTokenSecretRef:
