--- a/k8s/apps/external-secrets-store/onepassword.yaml
+++ b/k8s/apps/external-secrets-store/onepassword.yaml
@@ -8,6 +8,7 @@ spec:
       connectHost: "http://onepassword-connect.onepassword.svc.cluster.local:8080"
       vaults:
         kurumi: 1
+      namespace: "onepassword"
       auth:
         secretRef:
           connectTokenSecretRef:
