--- a/k8s/apps/external-secrets-store/onepassword.yaml
+++ b/k8s/apps/external-secrets-store/onepassword.yaml
@@ -8,9 +8,9 @@ spec:
       connectHost: "http://onepassword-connect.onepassword.svc.cluster.local:8080"
       vaults:
         kurumi: 1
-      namespace: "onepassword"
       auth:
         secretRef:
           connectTokenSecretRef:
+            namespace: onepassword
             name: onepassword-token
             key: token
