--- a/k8s/apps/kmc-proxy/externalsecret.yaml
+++ b/k8s/apps/kmc-proxy/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kmc-proxy
 spec:
   secretStoreRef:
-    name: vault
+    name: onepassword
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
@@ -12,5 +12,5 @@ spec:
   data:
   - secretKey: id_ed25519
     remoteRef:
-      key: ssh_keys
-      property: kmc-proxy
+      key: kmc-proxy
+      property: private_key
