--- a/k8s/apps/samba-backup/externalsecret.yaml
+++ b/k8s/apps/samba-backup/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: samba-backup-secret
 spec:
   secretStoreRef:
-    name: vault
+    name: onepassword
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
@@ -13,7 +13,7 @@ spec:
   - secretKey: id_ed25519
     remoteRef:
       key: samba-backup
-      property: id_ed25519
+      property: private_key
   - secretKey: user
     remoteRef:
       key: samba-backup
