--- a/k8s/_flux/image-update/externalsecret.yaml
+++ b/k8s/_flux/image-update/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
       operator: DoesNotExist
   externalSecretSpec:
     secretStoreRef:
-      name: vault
+      name: onepassword
       kind: ClusterSecretStore
     refreshInterval: 1m
     target:
