--- a/k8s/apps/ac-hacking-2024/back/externalsecret.yaml
+++ b/k8s/apps/ac-hacking-2024/back/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ac-hacking-2024
 spec:
   secretStoreRef:
-    name: vault
+    name: onepassword
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
