--- a/k8s/apps/cilium-hubble-oauth2-proxy/externalsecret.yaml
+++ b/k8s/apps/cilium-hubble-oauth2-proxy/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hubble-oauth2-proxy
 spec:
   secretStoreRef:
-    name: vault
+    name: onepassword
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
