--- a/k8s/apps/external-dns/externalsecret.yaml
+++ b/k8s/apps/external-dns/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: external-dns-secret
 spec:
   secretStoreRef:
-    name: vault
+    name: onepassword
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
