--- a/k8s/apps/loki/externalsecret.yaml
+++ b/k8s/apps/loki/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: loki-minio
 spec:
   secretStoreRef:
-    name: vault
+    name: onepassword
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
