--- a/k8s/apps/minio/externalsecret.yaml
+++ b/k8s/apps/minio/externalsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: minio
 spec:
   secretStoreRef:
-    name: vault
+    name: onepassword
     kind: ClusterSecretStore
   refreshInterval: 1m
   target:
