--- a/k8s/namespaces/namespaces.yaml
+++ b/k8s/namespaces/namespaces.yaml
@@ -87,3 +87,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: cilium-system
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: onepassword
