--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   mode: daemonset
   serviceAccount: otel-collector
+  managementState: managed
   config:
     receivers:
       filelog:
