--- a/k8s/apps/opentelemetry-collectors/k8s-deployment/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/k8s-deployment/otel-collector.yaml
@@ -6,6 +6,7 @@ spec:
   serviceAccount: otel-collector
   mode: deployment
   image: otel/opentelemetry-collector-k8s:0.109.0 # {"$imagepolicy": "opentelemetry-collector:opentelemetry-collector-k8s"}
+  managementState: managed
   config:
     receivers:
       k8s_cluster:
