--- a/k8s/apps/opentelemetry-collectors/servicemonitor/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/servicemonitor/otel-collector.yaml
@@ -16,6 +16,7 @@ spec:
           operator: NotIn
           values:
           - prometheus
+  managementState: managed
   config:
     receivers:
       prometheus:
