--- a/k8s/apps/opentelemetry-collectors/loki-exporter/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/loki-exporter/otel-collector.yaml
@@ -19,7 +19,7 @@ spec:
     processors:
       memory_limiter:
         check_interval: 1s
-        limit_percentage: 75
+        limit_mib: 2000
         spike_limit_percentage: 15
       batch:
         send_batch_size: 10000
@@ -46,5 +46,3 @@ spec:
   resources:
     requests:
       memory: 100Mi
-    limits:
-      memory: 4Gi
