--- a/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
+++ b/k8s/apps/opentelemetry-collectors/filelog/otel-collector.yaml
@@ -9,71 +9,12 @@ spec:
   config:
     receivers:
       filelog:
+        include_file_path: true
         include:
         - /var/log/pods/*/*/*.log
-        exclude:
-        - /var/log/pods/*/otel-collector/*.log
-        start_at: beginning
-        include_file_path: true
-        include_file_name: false
         operators:
-        - id: get-format # Find out which format is used by kubernetes
-          type: router
-          routes:
-          - output: parser-crio
-            expr: 'body matches "^[^ Z]+ "'
-          - output: parser-containerd
-            expr: 'body matches "^[^ Z]+Z"'
-          - output: parser-docker
-            expr: 'body matches "^\\{"'
-        - id: parser-crio # Parse CRI-O format
-          type: regex_parser
-          regex: '^(?P<time>[^ Z]+) (?P<stream>stdout|stderr) (?P<logtag>[^ ]*) ?(?P<log>.*)$'
-          output: extract_metadata_from_filepath
-          timestamp:
-            parse_from: attributes.time
-            layout_type: gotime
-            layout: '2006-01-02T15:04:05.999999999Z07:00'
-        - id: parser-containerd # Parse CRI-Containerd format
-          type: regex_parser
-          regex: '^(?P<time>[^ ^Z]+Z) (?P<stream>stdout|stderr) (?P<logtag>[^ ]*) ?(?P<log>.*)$'
-          output: extract_metadata_from_filepath
-          timestamp:
-            parse_from: attributes.time
-            layout: '%Y-%m-%dT%H:%M:%S.%LZ'
-        - id: parser-docker # Parse Docker format
-          type: json_parser
-          output: extract_metadata_from_filepath
-          timestamp:
-            parse_from: attributes.time
-            layout: '%Y-%m-%dT%H:%M:%S.%LZ'
-        - id: extract_metadata_from_filepath
-          type: regex_parser
-          regex: '^.*\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[a-f0-9\-]{36})\/(?P<container_name>[^\._]+)\/(?P<restart_count>\d+)\.log$'
-          parse_from: attributes["log.file.path"]
-          cache:
-            size: 128
-        - type: move
-          from: attributes.log
-          to: body
-        - type: move
-          from: attributes.stream
-          to: attributes["log.iostream"]
-        - type: move
-          from: attributes.container_name
-          to: resource["k8s.container.name"]
-        - type: move
-          from: attributes.namespace
-          to: resource["k8s.namespace.name"]
-        - type: move
-          from: attributes.pod_name
-          to: resource["k8s.pod.name"]
-        - type: move
-          from: attributes.restart_count
-          to: resource["k8s.container.restart_count"]
-        - type: move
-          from: attributes.uid
-          to: resource["k8s.pod.uid"]
+        - id: container-parser
+          type: container
     processors:
       memory_limiter:
         check_interval: 1s
